Matches Logic Updated